[workspace]


[dependencies]
doublets-ffi = { path = "/doublets-ffi/ffi-attributes" }
doublets = { path = "/doublets" }
platform-data = { path = "/dev-deps/data-rs" }


members = [
    "doublets-ffi",
    "doublets",

    # dev
    "dev-deps/mem-rs",
    "dev-deps/data-rs",
    "dev-deps/trees-rs",

    # internal
    "integration"
]
# in global rework
exclude = [
    "doublets-decorators",
]