[package]
name = "doublets-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
doublets = { path = "../doublets" }
ffi-attributes = { path = "ffi-attributes" }

tap = { version = "1.0.1" }
log-panics = { version = "2.1.0" }

crossbeam-channel = { version = "0.5.6" }
tracing = { version = "0.1.36" }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }

[package.log]
features = ["release_max_level_error"]

[features]
backtrace = []