[package]
name = "doublets"
version = "0.1.0-pre+beta.15"
edition = "2021"
authors = [
    "uselessgoddess",
    "Linksplatform Team <linksplatformtechnologies@gmail.com>"
]
categories = [
    "database-implementations", # wait rfcs#3185 "asynchronous"
]
keywords = [
    "associative", "doublets", "db",
]
readme = "../README.md"
license = "Unlicense"
repository = "https://github.com/linksplatform/doublets-rs"
homepage = "https://github.com/linksplatform/doublets-rs"
description = """
"""

[features]
mem = []
num = []
data = []
# todo: may be internal_platform
platform = ["mem", "num", "data"]

smallvec-optimization = ["smallvec"]

default = ["platform"]
full = ["platform", "smallvec-optimization"]

[dependencies]
cfg-if = { version = "1.0.0" }
thiserror = { version = "1.0.30" }
leak_slice = { version = "0.2.0" }


# platform
data = { package = "platform-data", path = "../dev-deps/data-rs", version = "0.1.0-beta.1" }
mem = { package = "platform-mem", version = "0.1.0-pre+beta.2", path = "../dev-deps/mem-rs" }
trees = { package = "platform-trees", version = "0.1.0-alpha.2", path = "../dev-deps/trees-rs" }

# optional
smallvec = { version = "1.8.1", features = ["const_generics"], optional = true }
rayon = { version = "1.5.3", optional = true }

[dev-dependencies]
rand = { version = "0.8.5" }
criterion = { version = "0.3.6" }
static_assertions = { version = "1.1.0" }

[[bench]]
name = "iter"
harness = false