[package]
name = "doublets"
version = "0.1.0-pre+beta.15"
edition = "2021"
authors = [
    "uselessgoddess",
    "Linksplatform Team <linksplatformtechnologies@gmail.com>"
]
categories = [
    "database-implementations", # wait rfcs#3185 "asynchronous"
]
keywords = [
    "associative", "doublets", "db",
]
readme = "../README.md"
license = "Unlicense"
repository = "https://github.com/linksplatform/doublets-rs"
homepage = "https://github.com/linksplatform/doublets-rs"
description = """
"""

[dependencies]
tap = { version = "1.0.1" }
cfg-if = { version = "1.0.0" }
thiserror = { version = "1.0.30" }
leak_slice = { version = "0.2.0" }
bumpalo = { version = "3.10.0", features = ["allocator_api", "collections"] }

# platform
data = { package = "platform-data", path = "../dev-deps/data-rs", version = "0.1.0-beta.1" }
mem = { package = "platform-mem", version = "0.1.0-pre+beta.2", path = "../dev-deps/mem-rs" }
trees = { package = "platform-trees", version = "0.1.0-alpha.2", path = "../dev-deps/trees-rs" }

# optional
smallvec = { version = "1.8.1", features = ["union"], optional = true }
rayon = { version = "1.5.3", optional = true }

[features]
mem = []
num = []
data = []
more-inline = []
small-search = ["smallvec"]
# todo: may be internal_platform
platform = ["mem", "num", "data"]

default = ["platform"]
full = ["platform", "rayon", "small-search"]

[dev-dependencies]
tap = { version = "1.0.1" }
rand = { version = "0.8.5" }
criterion = { version = "0.4", features = ["html_reports"] }
bumpalo = { version = "3.10.0", features = ["allocator_api", "collections"] }
mimalloc = { version = "0.1.29", default-features = false }
rpmalloc = "0.2.0"
tinyvec = { version = "1.6.0", features = ["alloc"] }
smallvec = { version = "1.9.0", features = [] }
static_assertions = { version = "1.1.0" }

[[bench]]
name = "iter"
harness = false