[package]
name = "doublets"
version = "0.1.0-pre+beta.15"
edition = "2021"
authors = [
    "uselessgoddess",
    "Linksplatform Team <linksplatformtechnologies@gmail.com>"
]
categories = [
    "database-implementations", # wait rfcs#3185 "asynchronous"
]
keywords = [
    "associative", "doublets", "db",
]
readme = "../README.md"
license = "Unlicense"
repository = "https://github.com/linksplatform/doublets-rs"
homepage = "https://github.com/linksplatform/doublets-rs"
description = """
"""

[dependencies]
tap = { version = "1.0.1" }
cfg-if = { version = "1.0.0" }
thiserror = { version = "1.0.30" }
leak_slice = { version = "0.2.0" }
bumpalo = { version = "3.11.1", features = ["allocator_api", "collections"] }
smallvec = { version = "2.0.0-alpha.1" }
either = { version = "1.9.0" }

core = { path = "../core", package = "platform-data" }
mem = { path = "../mem", package = "platform-mem" }
trees = { path = "../trees", package = "platform-trees" }

# optional
rayon = { version = "1.5.3", optional = true }

[features]
mem = []
num = []
data = []
more-inline = []
small-search = []
# todo: may be internal_platform
platform = ["mem", "num", "data"]

default = ["platform"]
full = ["platform", "rayon", "small-search"]

[dev-dependencies]
tap = { version = "1.0.1" }
rand = { version = "0.8.5" }
criterion = { version = "0.3.6" }
bumpalo = { version = "3.11.1", features = ["allocator_api", "collections"] }
mimalloc = { version = "0.1.29", default-features = false }
rpmalloc = "0.2.0"
tinyvec = { version = "1.6.0", features = ["alloc"] }
static_assertions = { version = "1.1.0" }

[[bench]]
name = "iter"
harness = false
